--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
                 <version>3.0.0-M5</version>
                 <configuration>
                     <suiteXmlFiles>
-                        <suiteXmlFile>testng.xml</suiteXmlFile>
+                        <suiteXmlFile>main.xml</suiteXmlFile>
                     </suiteXmlFiles>
                 </configuration>
             </plugin>
